change to the number of cores that they used.

--- a/Server/ValueAtRisk/Makefile
+++ b/Server/ValueAtRisk/Makefile
@@ -1,7 +1,10 @@
-all: var-st var-mt
+all: var-st var-mt VarMT.class
 
 var-st: var-st.cpp
 	c++ -O6 -o $@ $<
 
 var-mt: var-mt.cpp
 	c++ -O6 -lpthread -o $@ $<
+
+VarMT.class: VarMT.java
+	javac $<
