inline does in fact help

--- a/Server/ValueAtRisk/Makefile
+++ b/Server/ValueAtRisk/Makefile
@@ -1,10 +1,12 @@
+CFLAGS=-O6 -march=native
+
 all: var-st var-mt VarMT.class
 
 var-st: var-st.cpp
-	c++ -O6 -march=native -o $@ $<
+	c++ $(CFLAGS) -o $@ $<
 
 var-mt: var-mt.cpp
-	c++ -O6 -march=native -lpthread -o $@ $<
+	c++ $(CFLAGS) -lpthread -o $@ $<
 
 VarMT.class: VarMT.java
 	javac $<
